--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         body {
-            /* background-image: url(/WhatsApp\ Image\ 2021-04-16\ at\ 3.25.23\ PM.jpeg); */
+             background-image: url(/WhatsApp\ Image\ 2021-04-16\ at\ 3.25.23\ PM.jpeg); 
             background-repeat: no-repeat;
             background-size: cover;
             width: 100%;
