--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         }
 
         body {
-             background-image: url(/WhatsApp\ Image\ 2021-04-16\ at\ 3.25.23\ PM.jpeg); 
+             /*background-image: url(/WhatsApp\ Image\ 2021-04-16\ at\ 3.25.23\ PM.jpeg); */
             background-repeat: no-repeat;
             background-size: cover;
             width: 100%;
@@ -223,7 +223,7 @@
     <div class="home">
         <div class="navbar">
 
-            <img id="logo" src="/cyber-security.png" alt="">
+            <img id="logo" src="cyber-security.png" alt="">
             <h3 class="logoname">Relic Defense</h3>
             <ul class="navbar1">
                 <li><a class="active" href="#HOME">Home</a></li>
