--- a/index.html
+++ b/index.html
@@ -114,7 +114,7 @@
         }
         .home{
             height: 600px;
-            background-image: url(/WhatsApp\ Image\ 2021-04-16\ at\ 3.25.23\ PM.jpeg);
+            background-image: url(WhatsApp\ Image\ 2021-04-16\ at\ 3.25.23\ PM.jpeg);
             background-size: cover;
             margin: 0px;
             padding: 0px;
